Use base::ReplaceFile rather than base::Move in mojo leveldb env.

This should hopefully reduce the large error rate in rename file
operations on windows in the mojo leveldb env, as ReplaceFile
should work better for these kinds of operations.

Bug: 732863
Change-Id: I7abe9ff025eabfb13e1e2716aa091dd01ed9fccc
Reviewed-on: https://chromium-review.googlesource.com/533679
Reviewed-by: Elliot Glaysher <erg@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Marijn Kruisselbrink <mek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#479131}
Former-commit-id: eb54972f13c11976dea9f1844e063506d4fc6384